theme: fix z-index on medium-zoom

--- a/themes/smol/assets/scss/main.scss
+++ b/themes/smol/assets/scss/main.scss
@@ -258,6 +258,10 @@ picture,
   }
 }
 
+.medium-zoom-overlay {
+  z-index: 99;
+}
+
 img {
   display: block;
   transition-property: opacity, transform;
@@ -281,6 +285,7 @@ img {
   &.medium-zoom-image--opened {
     cursor: zoom-out;
     opacity: 1;
+    z-index: 100;
   }
 }
 
